fixed navbar width and spacing

--- a/navbar.css
+++ b/navbar.css
@@ -68,7 +68,7 @@ body {
     font-family: montserrat;
 }
 
-h1 {
+header h1 {
     color:white;
     margin-top: 1O0px;
     vertical-align: middle;
@@ -91,11 +91,11 @@ h1 {
     align-items: center;
 }
 
-input {
+header input {
     margin-right: 30px;
 }
 
-a {
+header a {
     text-decoration: none;
     color:var(--colorgreen);
 }
@@ -104,8 +104,8 @@ a {
     width:100%;
 }
 
-ul {
-    width:100%;
+header ul {
+    width:80%;
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -113,7 +113,7 @@ ul {
     align-items:center;
     padding:0;
     justify-content: space-around;
-    margin:0;
+    margin:auto;
 
 }
 
@@ -134,6 +134,7 @@ header li {
     text-decoration: none;
     font-size: 22px;
     cursor : pointer;  
+    width:100%;
 
 }
 
@@ -144,6 +145,8 @@ header li a{
     height: 50px;
     width: 100px;
     line-height: 50px;
+    color:var(--colorgreen);
+    width:100%;
 }
 
 
@@ -153,8 +156,6 @@ header li a{
     position: absolute;
     background-color:white;
     width: 200px;
-
-    
 }
 
 .sub-menu li {
